--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,3 +17,5 @@ jobs:
       run: yarn format:check
     - name: Check quality with ESLint
       run: yarn lint
+    - name: Check code runs as expected
+      run: yarn test
